// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty Empty base demo works fine 1`] = `
<base>
  <t-empty
    description="描述文字"
    icon="info-circle-filled"
    tClass="empty-cls"
  />
</base>
`;

exports[`Empty Empty buttonEmpty demo works fine 1`] = `
<buttonEmpty>
  <t-empty
    description="描述文字"
    icon="info-circle-filled"
    tClass="empty-cls"
  >
    <t-button
      slot="action"
      tClass="t-empty__button"
      theme="primary"
    >
      操作按钮
    </t-button>
  </t-empty>
</buttonEmpty>
`;

exports[`Empty Empty imageEmpty demo works fine 1`] = `
<imageEmpty>
  <t-empty
    description="描述文字"
    image="https://oteam-tdesign-1258344706.cos.ap-guangzhou.myqcloud.com/miniprogram/empty__demo-image.png"
    tClass="empty-cls"
    tClassImage="t-empty__image"
  />
</imageEmpty>
`;

exports[`Empty Empty pageEmpty demo works fine 1`] = `
<pageEmpty>
  <t-empty
    tClass="empty-cls"
  >
    <t-button
      block="{{true}}"
      size="large"
      slot="action"
      variant="plain"
      bind:tap="goEmptyPage"
    >
      空页面
    </t-button>
  </t-empty>
</pageEmpty>
`;
